--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,6 @@
         "maxLambdaSize": "15mb",
         "runtime": "python3.9"
       }
-    },
-    {
-      "src": "setup_vercel.py",
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.9" }
     }
   ],
   "routes": [
@@ -27,5 +22,10 @@
   ],
   "env": {
     "DJANGO_SETTINGS_MODULE": "backend.settings"
+  },
+  "functions": {
+    "backend/wsgi.py": {
+      "maxDuration": 10
+    }
   }
 }
