--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ django-cors-headers==4.9.0
 djangorestframework==3.16.1
 sqlparse==0.5.3
 tzdata==2025.2
+whitenoise==6.6.0
+python-dotenv==1.0.0
+gunicorn==21.2.0
+Pillow==10.2.0
