--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,18 @@
   "builds": [
     {
       "src": "backend/wsgi.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles"
+      }
     }
   ],
   "routes": [
@@ -16,11 +27,16 @@
       "dest": "/media/$1"
     },
     {
+      "src": "/admin/(.*)",
+      "dest": "backend/wsgi.py"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/wsgi.py"
+    },
+    {
       "src": "/(.*)",
       "dest": "backend/wsgi.py"
     }
-  ],
-  "env": {
-    "DJANGO_SETTINGS_MODULE": "backend.settings"
-  }
+  ]
 }
