--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,2 @@
-Django==5.1.1
-djangorestframework==3.15.2
-django-cors-headers==4.4.0
-whitenoise==6.6.0
+Flask==2.3.3
 gunicorn==21.2.0
-python-dotenv==1.0.0
-dj-database-url==2.1.0
-psycopg2-binary==2.9.9
-Pillow==10.4.0
