--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
 # No dependencies needed for basic HTTP server
+Django==5.1.6
+gunicorn
+whitenoise
+dj-database-url
+psycopg2-binary
+python-dotenv
+djangorestframework
+corsheaders
